--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nikka-leaps"
-version = "0.1.1-rc1"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,5 +10,5 @@ chrono = "0.4.23"
 clap = { version = "4.0.32", features = ["derive", "cargo"] }
 ctrlc = "3.2.4"
 libloading = "0.7.4"
-nvml-wrapper = { git = "https://github.com/Cldfire/nvml-wrapper", branch = "legacy-functions", features = ["legacy-functions"] }
+nvml-wrapper = { version = "0.9.0", features = ["legacy-functions"] }
 once_cell = "1.17.0"
